fix CSS gaps and add finalize BankCashFlow component

--- a/Ozym.Web/Components/Dashboard/AccountBalanceView.razor.css
+++ b/Ozym.Web/Components/Dashboard/AccountBalanceView.razor.css
@@ -16,3 +16,11 @@
 .datagrid div.negative {
     color: var(--theme-text-color-failure, red);
 }
+
+::deep .form-control:not(button) {
+    font-size: 0.8rem !important;
+}
+
+::deep .form-entry .label {
+    padding-left: 0.1rem !important;
+}
