--- a/Ozym.Web/Components/Dashboard/FutureValueCalculator.razor.css
+++ b/Ozym.Web/Components/Dashboard/FutureValueCalculator.razor.css
@@ -22,7 +22,11 @@
 }
 
 ::deep .form-control:not(button) {
-    font-size: 0.8rem;
+    font-size: 0.8rem !important;
+}
+
+::deep .form-entry .label {
+    padding-left: 0.1rem !important;
 }
 
 /* #region Radzen.Blazor Material customization */
